crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__custom_function_all_optionals.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo(
    pub Option<types::CaretColorStyleValue>,
    pub Option<types::CaretAnimationStyleValue>,
    pub Option<types::CaretShapeStyleValue>,
);
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <types::CaretColorStyleValue>::peek(p, c)
            || <types::CaretAnimationStyleValue>::peek(p, c)
            || <types::CaretShapeStyleValue>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        let mut val0 = None;
        let mut val1 = None;
        let mut val2 = None;
        loop {
            if val0.is_none() && p.peek::<types::CaretColorStyleValue>() {
                val0 = Some(p.parse::<types::CaretColorStyleValue>()?);
                continue;
            }
            if val1.is_none() && p.peek::<types::CaretAnimationStyleValue>() {
                val1 = Some(p.parse::<types::CaretAnimationStyleValue>()?);
                continue;
            }
            if val2.is_none() && p.peek::<types::CaretShapeStyleValue>() {
                val2 = Some(p.parse::<types::CaretShapeStyleValue>()?);
                continue;
            }
            if val0.is_none() && val1.is_none() && val2.is_none() {
                let c: ::css_lexer::Cursor = p.parse::<::css_parse::T![Any]>()?.into();
                Err(::css_parse::diagnostics::Unexpected(c.into(), c.into()))?
            } else {
                return Ok(Self(val0, val1, val2));
            }
        }
    }
}
#[automatically_derived]
impl ::css_parse::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        if let Some(inner) = &self.0 {
            ::css_parse::ToCursors::to_cursors(inner, s);
        }
        if let Some(inner) = &self.1 {
            ::css_parse::ToCursors::to_cursors(inner, s);
        }
        if let Some(inner) = &self.2 {
            ::css_parse::ToCursors::to_cursors(inner, s);
        }
    }
}
